# Lightshow

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  LINUX_AUDIO_FIX.md  Makefile  README.md  TODO.md  __main__.spec  config.py  debug_audio.py  install.bat  lightshow.linux.spec  lightshow.spec  main.py  pyproject.toml  requirements.in  requirements.txt  requirements.txty
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml
audio/: audio_streams.py  audio_types.py  processors.py
audio/effects/: __init__.py  break_detector.py  drop_detector.py  kick_detector.py  silent_detector.py  snare_detector.py  spike_detector.py
devices/: device.py  moving_head.py
devices/utils/: wifi_scanner.py
installer/: AppRun  lightshow.desktop  lightshow.nsi
lightshow/: __main__.py  app.py
lightshow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lightshow/audio/: audio_streams.py  audio_types.py  data.py  processors.py
lightshow/audio/detectors/: __init__.py  break_detector.py  drop_detector.py  kick_detector.py  silent_detector.py  spike_detector.py
lightshow/audio/detectors/methods/: average_difference.py  detection_method.py  percentil.py
lightshow/audio/effects/: break_detector.py  kick_detector.py  spike_detector.py
lightshow/devices/: __init__.py  device.py  devices_types.py
lightshow/devices/animations/: AAnimation.py  __init__.py
lightshow/devices/launchpad/: launchpad.py
lightshow/devices/moving_head/: __init__.py  moving_head.py  moving_head_animations.py  moving_head_colors.py  moving_head_controller.py
lightshow/devices/moving_head/animations/: BernoulliLemniscateAnimation.py  BounceAnimation.py  BreakCircleAnimation.py  CircleAnimation.py  ListAnimation.py  RegularPolygonAnimation.py  __init__.py
lightshow/devices/utils/: wifi_scanner.py
lightshow/gui/: GUI.py  gui.py  main_window.py  main_window_dpg.py.bak
lightshow/gui/components/: logs.py
lightshow/gui/dialogs/: about_dialog.py  settings_dialog.py
lightshow/gui/node_editor/: custom_node.py  custom_viewer.py  datas.py  display_node.py  executable_node.py  generic_node.py  node_window.py  typed_port.py
lightshow/gui/node_editor/nodes/: Test.py  arrays.py  boolean.py  colors.py  displays.py  math.py  sources.py  string.py
lightshow/gui/panels/: __init__.py  audio_panel.py  base_panel.py  devices_details_panel.py  devices_panel.py  manual_packets.py  stats.py
lightshow/gui/utils/: __init__.py  message_box.py  ui_signals.py
lightshow/tracks_tracker/: __init__.py  abstract_tracker.py  linux.py  types.py  windows.py
lightshow/utils/: __init__.py  colors.py  config.py  logger.py  tracks_infos.py  update_checker.py
lightshow/visualization/: __init__.py  frequencies_visualizer.py  spike_detector_visualizer.py  tk_runtime_visualizer.py
specs/: mh_head_protocole.md
visualization/: spike_detector_visualizer.py
