[project]
name = "lightshow"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "pyaudiowpatch>=0.2.12.7",
    "typing-extensions>=4.15.0",
    "websocket-client>=1.8.0",
    "winrt-runtime>=3.2.1",
    "winrt-windows-media>=3.2.1",
    "winrt-windows-media-control>=3.2.1",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "pyinstaller>=6.16.0",
]

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.setuptools]
py-modules = []

[tool.uv]
# We want to use copy here, since symlink mode means we can't use our own portaudio dll
# A bit slower, but it works for our use case
link-mode = "copy"
default-groups = []

[project.scripts]
lightshow = "lightshow.__main__:main"
