[project]
name = "lightshow"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-Charts>=6.7.0",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "pyaudiowpatch>=0.2.12.7 ; platform_system == \"Windows\"",
    "typing-extensions>=4.15.0",
    "websocket-client>=1.8.0",
    "winrt-runtime>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-media>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-media-control>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-foundation>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-foundation-collections>=3.2.1 ; platform_system == \"Windows\"",
    "pyinstaller>=6.16.0",
    "matplotlib>=3.8.0",
    "pyqtgraph>=0.14.0",
]

[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[tool.setuptools]
py-modules = []

[tool.uv]
# We want to use copy here, since symlink mode means we can't use our own portaudio dll
# A bit slower, but it works for our use case
link-mode = "copy"
default-groups = []

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
lightshow = { workspace = true }

[dependency-groups]
dev = [
    "lightshow",
]

[project.scripts]
lightshow = "lightshow.__main__:main"
