[project]
name = "lightshow"
version = "0.32.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-Charts>=6.7.0",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "ty>=0.0.44",
    "websocket-client>=1.8.0",
    "winrt-runtime>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-media>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-media-control>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-foundation>=3.2.1 ; platform_system == \"Windows\"",
    "winrt-windows-foundation-collections>=3.2.1 ; platform_system == \"Windows\"",
    "pyinstaller>=6.20.0",
    "matplotlib>=3.10.9",
    "pyqtgraph>=0.14.0",
    "dbus-next>=0.2.3",
    "pyopengl>=3.1.10",
    "pyopengl-accelerate>=3.1.10",
    "soundcard>=0.4.6",
    "distro>=1.9.0",
    "semver>=3.0.4",
    "mido[ports-rtmidi]>=1.3.3",
]

[build-system]
requires = ["pdm-backend>=2.4.8"]
build-backend = "pdm.backend"

[tool.setuptools]
py-modules = []

[tool.uv]
link-mode = "copy"
default-groups = []

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
lightshow = { workspace = true }

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "lightshow",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
    "ty>=0.0.44",
]

[project.scripts]
lightshow = "lightshow.__main__:main"
